<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/dimen18dp"
    android:paddingEnd="@dimen/dimen18dp"
    android:paddingTop="@dimen/dimen16dp"
    android:background="@color/white"
    android:paddingBottom="@dimen/dimen16dp">

    <RelativeLayout
        android:id="@+id/rl_toollbar"
        android:layout_width="match_parent"
        android:layout_marginStart="-8dp"
        android:layout_marginEnd="-8dp"
        android:layout_height="@dimen/dimen42dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dimen42dp"
            android:layout_height="@dimen/dimen42dp"
            android:layout_centerVertical="true"
            android:paddingEnd="@dimen/dimen12dp"
            android:paddingStart="@dimen/dimen12dp"
            android:src="@drawable/ic_back" />

        <com.webnotics.swipee.CustomUi.PopinsMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addeducation"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen16sp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_save"
        android:layout_below="@+id/rl_toollbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:gravity="center_vertical"
                android:text="@string/colluniversity"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen14sp" />

            <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                android:id="@+id/tv_college"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen36dp"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:hint="@string/selectcolluniversity"
                android:maxLength="56"
                android:maxLines="1"
                android:paddingStart="@dimen/dimen2dp"
                android:paddingEnd="@dimen/dimen2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/dimen12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1dp"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@color/nav_gray" />

            <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:gravity="center_vertical"
                android:text="@string/degree"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen14sp" />

            <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                android:id="@+id/tv_degree"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen36dp"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:hint="@string/selectdegree"
                android:maxLength="56"
                android:maxLines="1"
                android:paddingStart="@dimen/dimen2dp"
                android:paddingEnd="@dimen/dimen2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/dimen12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1dp"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@color/nav_gray" />

            <com.webnotics.swipee.CustomUi.PopinsRegularCheckBox
                android:id="@+id/cb_pursuing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="@dimen/dimen12dp"
                android:text="@string/iampursuing"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen12sp"
                android:theme="@style/checkbox_theme" />


            <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:gravity="center_vertical"
                android:text="@string/period"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen14sp" />

            <LinearLayout
                android:id="@+id/strttimeendtimelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_startdate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_startdate1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen45dp">

                        <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                            android:id="@+id/tv_startdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen15dp"
                            android:background="@null"
                            android:hint="@string/startdate"
                            android:singleLine="true"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/dimen12sp" />

                        <ImageView
                            android:layout_width="@dimen/dimen20dp"
                            android:layout_height="@dimen/dimen20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"

                            android:layout_marginStart="@dimen/dimen5dp"
                            android:paddingTop="@dimen/dimen5dp"
                            android:rotation="90"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <View

                        android:id="@+id/sep4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/rl_startdate1"
                        android:background="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_enddate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen20dp"
                    android:layout_weight="1">

                    <RelativeLayout

                        android:id="@+id/rl_enddate1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen45dp">

                        <com.webnotics.swipee.CustomUi.PopinsRegularTextView
                            android:id="@+id/tv_enddate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen15dp"
                            android:background="@null"
                            android:hint="@string/enddate"
                            android:singleLine="true"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/dimen12sp" />

                        <ImageView
                            android:layout_width="@dimen/dimen20dp"
                            android:layout_height="@dimen/dimen20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/dimen5dp"
                            android:paddingTop="@dimen/dimen5dp"
                            android:rotation="90"
                            android:src="@drawable/ic_right_arrow" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/sep5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/rl_enddate1"
                        android:background="@color/gray" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <com.webnotics.swipee.CustomUi.PopinsSemiboldTextView
        android:id="@+id/tv_save"
        android:layout_width="@dimen/dimen142dp"
        android:layout_height="@dimen/dimen48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dimen8dp"
        android:background="@drawable/primary_semiround_bg"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen16sp" />

</RelativeLayout>