<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingStart="@dimen/dimen18dp"
    android:paddingEnd="@dimen/dimen18dp"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dimen16dp"
    android:paddingBottom="@dimen/dimen16dp"
    tools:context=".activity.Seeker.AddCarrierObjectiveActivity">

    <RelativeLayout
        android:id="@+id/rl_toollbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen42dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dimen30dp"
            android:layout_height="@dimen/dimen30dp"
            android:layout_centerVertical="true"
            android:paddingEnd="@dimen/dimen12dp"
            android:src="@drawable/ic_back" />

        <com.webnotics.swipee.CustomUi.PopinsMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/careerobjective"
            android:textColor="@color/black"

            android:textSize="@dimen/dimen16sp" />

        <com.webnotics.swipee.CustomUi.PopinsRegularTextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:padding="@dimen/dimen4dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen16sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_toollbar"
        android:layout_marginTop="@dimen/dimen6dp">

        <com.webnotics.swipee.CustomUi.PopinsRegularEditText
            android:id="@+id/et_objective"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/white"
            android:gravity="start"
            android:hint="@string/entercareerobjective"
            android:minHeight="@dimen/dimen156dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp" />
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>